<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:id="@+id/P_LYT"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".PrincipalW" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/Conect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="conect"
            android:text="@string/Button_Conect" />

        <TextView
            android:id="@+id/label_ser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Ser_Dat" />

        <Button
            android:id="@+id/chan_ser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="Chan_Ser"
            android:text="@string/set_server" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/inputTyp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/txt" />

        <EditText
            android:id="@+id/TX"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="12"
            android:hint="@string/Text_TX"
            android:inputType="text" >

            <requestFocus />
        </EditText>

        <Button
            android:id="@+id/Send"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="enviar"
            android:text="@string/BSend" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <!--<CheckBox-->
            <!--android:id="@+id/TN"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:checked="false"-->
            <!--android:onClick="tnum"-->
            <!--android:text="@string/Check_Num" />-->

        <Button
            style = "android:attr/buttonBarButtonStyle"
            android:id="@+id/DelTX"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="BTX"
            android:text="@string/BTX" />

        <Button
            style = "android:attr/buttonBarButtonStyle"
            android:id="@+id/DelRX"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="BRX"
            android:text="@string/BRX" />
    </LinearLayout>

    <ScrollView
        android:id="@+id/scro"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:scrollbarAlwaysDrawVerticalTrack="true"
        android:scrollbarStyle="outsideOverlay" >

        <TextView
            android:id="@+id/RX"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Text_RX"
            android:inputType="none"
            android:scrollbarAlwaysDrawVerticalTrack="true"
            android:scrollbars="vertical"
            android:textIsSelectable="true" />

    </ScrollView>

    <ScrollView
        android:id="@+id/scron"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:scrollbarAlwaysDrawVerticalTrack="true"
        android:scrollbarStyle="outsideOverlay"
        android:visibility="gone">

        <TextView
            android:id="@+id/RXn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Text_RX"
            android:inputType="none"
            android:scrollbarAlwaysDrawVerticalTrack="true"
            android:scrollbars="vertical"
            android:textIsSelectable="true" />

    </ScrollView>

     <LinearLayout
         android:id="@+id/commander"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="bottom"
         android:orientation="vertical"
         android:visibility="gone" >

         <!--<SurfaceView -->
             <!--android:id="@+id/surfaceView1" -->
             <!--android:layout_width="match_parent" -->
             <!--android:layout_height="match_parent" /> -->

         <LinearLayout
             android:orientation="horizontal"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">

             <Button
                 style = "android:attr/buttonBarButtonStyle"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:text="@string/commDVal"
                 android:id="@+id/comm1"
                android:onClick="commClick" />

             <Button
                 style = "android:attr/buttonBarButtonStyle"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:text="@string/commDVal"
                 android:id="@+id/comm2"
                android:onClick="commClick" />

             <Button
                 style = "android:attr/buttonBarButtonStyle"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:text="@string/commDVal"
                 android:id="@+id/comm3"
                android:onClick="commClick" />
         </LinearLayout>
         <LinearLayout
             android:orientation="horizontal"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">

             <Button
                 style = "android:attr/buttonBarButtonStyle"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:text="@string/commDVal"
                 android:id="@+id/comm4"
                android:onClick="commClick" />

             <Button
                 style = "android:attr/buttonBarButtonStyle"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:text="@string/commDVal"
                 android:id="@+id/comm5"
                android:onClick="commClick" />

             <Button
                 style = "android:attr/buttonBarButtonStyle"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:text="@string/commDVal"
                 android:id="@+id/comm6"
                android:onClick="commClick" />
         </LinearLayout>
         <LinearLayout
             android:orientation="horizontal"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">

             <Button
                 style = "android:attr/buttonBarButtonStyle"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:text="@string/commDVal"
                 android:id="@+id/comm7"
                android:onClick="commClick" />

             <Button
                 style = "android:attr/buttonBarButtonStyle"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:text="@string/commDVal"
                 android:id="@+id/comm8"
                android:onClick="commClick" />

             <Button
                 style = "android:attr/buttonBarButtonStyle"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:text="@string/commDVal"
                 android:id="@+id/comm9"
                android:onClick="commClick" />
         </LinearLayout>
         <LinearLayout
             android:orientation="horizontal"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">

             <Button
                 style = "android:attr/buttonBarButtonStyle"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:text="@string/commDVal"
                 android:id="@+id/comm10"
                android:onClick="commClick" />

             <Button
                 style = "android:attr/buttonBarButtonStyle"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:text="@string/commDVal"
                 android:id="@+id/comm11"
                android:onClick="commClick" />

             <Button
                 style = "android:attr/buttonBarButtonStyle"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:text="@string/commDVal"
                 android:id="@+id/comm12"
                android:onClick="commClick" />
         </LinearLayout>


     </LinearLayout>

    <!--android:visibility="gone"
        android:inputType="textMultiLine"
		android:layout_marginTop="90dp"
		android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    -->
    

</LinearLayout>